--- a/mydidata/templates/mydidata/my_progress.html
+++ b/mydidata/templates/mydidata/my_progress.html
@@ -22,33 +22,21 @@
                 <table id="cd-table" class="table table-hover">
                     <tbody>
                         <tr>
-                            <th>Aluno</th>
                             {% for question in topic.question_set.all %}
-                                <th>Question {{ forloop.counter }}</th>
+                                <th>Questão {{ forloop.counter }}</th>
                             {% endfor %}
                         </tr>
                         {% for student in students%}
                             <tr>
-                                <td>{{student.first_name}}</td>
                                 
                                 {%for question in topic.get_ordered_questions %}
                                     {% get_answers question student as answers%}
                                     {%if answers%}
                                         {%for answer in answers%}
+                                            {% get_icon_class answer student as url_and_icon_class%}
                                             <td>
-                                                
-                                                {%if answer.is_sent%}
-                                                    <a href="{{answer.get_detail_url}}"><i class="bi bi-cloud-check"></i></a>
-                                                {%else%}
-                                                    {%if answer.is_ok%}
-                                                    <a href="{{answer.get_detail_url}}"><i class="bi bi-check-circle-fill"></i></a>
-                                                    
-                                                    {%else%}
-                                                        <a href="{{answer.get_detail_url}}"><i title= "Correções solicitadas" style="color: red" class="bi bi-exclamation-triangle-fill"></i></a>
-                                                    {%endif%}
-                                                {%endif%}
+                                                <a href="{{url_and_icon_class.0}}"><i style="{{url_and_icon_class.1}}" class="{{url_and_icon_class.2}}"></i></a>
                                             </td>
-                                            
                                         {%endfor%}
                                     {%else%}
                                         <td><a 
