--- a/mydidata/templates/mydidata/topic_progress.html
+++ b/mydidata/templates/mydidata/topic_progress.html
@@ -46,39 +46,21 @@
                             
                             {%for question in topic.get_ordered_questions %}
                                 {% get_answers question student as answers%}
+                                
                                 {%if answers%}
                                     {%for answer in answers%}
+                                        {% get_icon_class answer user as url_and_icon_class%}
                                         <td>
-                                            {%if answer.is_sent%}
-                                                {%if user.is_superuser%}
-                                                    <a href="{{answer.feedback_url}}"><i class="bi bi-cloud-check"></i></a>
-                                                {%else%}                                                
-                                                    <a href="{{answer.get_detail_url}}"><i class="bi bi-cloud-check"></i></a>
-                                                {%endif%}
-
-                                                 
-                                            {%else%}
-                                                {%if answer.is_ok%}
-                                                    {%if user.is_superuser%}
-                                                        <a href="{{answer.feedback_url}}"><i class="bi bi-check-circle-fill"></i></a>
-                                                    {%else%}                                                
-                                                        <a href="{{answer.get_detail_url}}"><i class="bi bi-check-circle-fill"></i></a>
-                                                    {%endif%}
-                                                
-                                                 {%else%}
-                                                    {%if user.is_superuser%}
-                                                        <a href="{{answer.feedback_url}}"><i style="color: red" class="bi bi-exclamation-triangle-fill"></i></a>
-                                                    {%else%}                                                
-                                                        <a href="{{answer.get_detail_url}}"><i style="color: red" class="bi bi-exclamation-triangle-fill"></i></a>
-                                                    {%endif%}
-                                                                                          
-                                                 {%endif%}
-                                            {%endif%}
+                                            <a href="{{url_and_icon_class.0}}"><i style="{{url_and_icon_class.1}}" class="{{url_and_icon_class.2}}"></i></a>
                                         </td>
                                         
                                     {%endfor%}
                                 {%else%}
-                                    <td><span class="badge">?</span></a><br></td>
+                                    <td>
+                                        <a 
+                                            href="{{ question.get_answer_url }}"><i class="bi bi-pencil-square"></i></a><br>
+                                    </td>
+                                    
                                 {%endif%}
                             {%endfor%}
                         </tr>
