--- a/mydidata/templates/mydidata/base.html
+++ b/mydidata/templates/mydidata/base.html
@@ -66,7 +66,7 @@
                     {%endif%}
                     <li class="nav-item active">
                     <a class="nav-link" href="{% url 'mydidata:disciplines' %}"
-                                    >Meus Cursos</a>
+                                    >Séries Disponíveis</a>
                     </li>
 
                     <li class="nav-item active"><a class="nav-link" href="{% url 'mydidata:disciplines' %}"
@@ -86,6 +86,8 @@
                         >Turmas de Reforço</a></li>
                     
                 {% endif %}
+                <li class="nav-item active"><a class="nav-link" href="https://www.aprendafazendo.net/mydidata/topic_detail/TzQrcqomGy7WA3pzhS9fue/"
+                    >Sobre o Autor</a></li>
                 
 
                 </ul>
