--- a/mydidata/templates/mydidata/base.html
+++ b/mydidata/templates/mydidata/base.html
@@ -3,7 +3,7 @@
 <html>
     {# Make modifiable head elements #}
     <head>
-        <title>{% block title %}Home {% endblock title %} | Didata</title>
+        <title>{% block title %}Home {% endblock title %}</title>
         {% block head_favicon %}
             <link rel="icon" type="image/png"
                   href="/static/images/favicon.ico">
@@ -21,6 +21,11 @@
                       content="width=device-width, initial-scale=1.0">
             {% endblock head_meta_viewport %}
         {% endblock head_meta %}
+
+        {%block page_description%}
+            <meta name="description" content="Este site apresenta séries voltadas para todos os públicos interessados, desde a informática básica até a avançada, com técnicas de programação e desenvolvimento de aplicativos">
+        {%endblock page_description%}
+
         {% block head_css %}
             {% block head_css_site %}
                 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
