--- a/mydidata/templates/mydidata/topic_progress.html
+++ b/mydidata/templates/mydidata/topic_progress.html
@@ -26,6 +26,7 @@
                     <h4><a href="{{close_url}}">Fechar</a></h4>
                 {%endif%}
                 <h4><a href="/mydidata/download_answers/{{topic.uuid}}/{{classroom.id}}"> Baixar Respostas </a></h4>
+                <h4><a href="/mydidata/download_grades_by_topic/{{classroom.id}}/{{topic.uuid}}">Baixar Notas </a></h4>
                 <h4><a href="/mydidata/correct_whole_topic/{{topic.uuid}}/{{classroom.id}}"> Avaliar </a></h4>
             {%else%}
                 <h2>{{topic.topic_title}}</h2>
