--- a/mydidata/templates/mydidata/topic_detail.html
+++ b/mydidata/templates/mydidata/topic_detail.html
@@ -26,7 +26,8 @@
             
                 <div id="gi-container" class="ad-container2">
                     
-                    <a href="/mydidata/topic_edit/{{topic.uuid}}/"> Editar </a>
+                    <a href="/mydidata/version/{{topic.id}}/"> Editar </a>
+                    | <a href="/mydidata/version_list/{{topic.id}}/"> Versões </a>
                     
                     {% include 'mydidata/topic_item_view.html' %}
                     
