--- a/mydidata/templates/mydidata/topic_item_form.html
+++ b/mydidata/templates/mydidata/topic_item_form.html
@@ -6,7 +6,7 @@
     {% if form.errors %}
         {% for field in form %}
             {% for error in field.errors %}
-                <div class="alert alert-dagner">
+                <div class="alert alert-danger">
                     <strong> {{error | escape}}</strong>
                 </div>
             {% endfor %}
