--- a/mydidata/templates/mydidata/question_item_form.html
+++ b/mydidata/templates/mydidata/question_item_form.html
@@ -1,23 +1,12 @@
 <form id="contact-form"
       {# POST Destination #}
-      action="{% if question.uuid %}
-      {% url 'mydidata:question_update' question.uuid %}{% else %}{% url 'mydidata:question_new' %}{% endif %}"
+      action=""
       method="post">
     {% csrf_token %}
-    <div id="gi-h-w">s
-        <p>{{ form.question_text | safe}}</p>
-        <span>{{ form.question_text.errors }}</span>
-    </div>
-    <div class="row">
-        <div class="col-md-9">
-            <p>{{ form.difficulty_level }}</p>
-            <span>{{ form.difficulty_level.errors }}</span>
-        </div>
-        <div class="col-md-9">
-            <p>{{ form.question_type }}</p>
-            <span>{{ form.question_type.errors }}</span>
-        </div>
-    </div>
+    
+    {{ form.media }}
+    {{ form.as_p }} 
+
     
     <input id="id_topic" name="topic"
            type="hidden"
