--- a/mydidata/templates/mydidata/topic_detail.html
+++ b/mydidata/templates/mydidata/topic_detail.html
@@ -58,6 +58,7 @@
                 <div class="ad-headers">
                     <h4 class="ad-mh m-none">Questões</h4>
                 </div>
+                <a href="/mydidata/question_types/{{topic.uuid}}">+ Questão</a>
                 <div id="cd-body" class="row">
                     <table id="cd-table" class="table">
                         <tbody>
