--- a/mydidata/templates/mydidata/base.html
+++ b/mydidata/templates/mydidata/base.html
@@ -35,6 +35,8 @@
                 <link href="/static/css/mydidata.css"
                       rel="stylesheet" media="screen">
                 <link href="/static/ckeditor/ckeditor/plugins/codesnippet/lib/highlight/styles/default.css" rel="stylesheet">
+                <link rel="stylesheet" type="text/css" href="/static/admin/css/widgets.css" />
+
             {% endblock head_css_site %}
             {% block head_css_section %}{% endblock head_css_section %}
             {% block head_css_page %}{% endblock head_css_page %}
@@ -58,6 +60,10 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="/mydidata">Bem vindo {{user.first_name}}!</a>
                         </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="{% url 'mydidata:disciplines' %}"
+                                            >Meus Cursos</a>
+                        </li>
 
 
                     {%endif%}
@@ -71,7 +77,7 @@
                     {%endif%}
                     <li class="nav-item active">
                     <a class="nav-link" href="{% url 'mydidata:disciplines' %}"
-                                    >Séries Disponíveis</a>
+                                    >Todas as Séries</a>
                     </li>
 
                     <li class="nav-item active"><a class="nav-link" href="{% url 'mydidata:disciplines' %}"
@@ -81,6 +87,7 @@
                         >Avaliações</a></li>
                     {%endif%}
                 {% if user.is_authenticated %}
+                    <li class="nav-item active"><a class="nav-link" href="{% url 'mydidata:list_teams' %}">Minhas Equipes</a></li>
                     <li class="nav-item active"><a class="nav-link" href="/mydidata/logout/">Sair</a></li>
                 {%endif%}    
             
@@ -136,7 +143,8 @@
         <script src="/static/js/popper.min.js"></script>
         <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
         <script src="/static/js/holder.min.js"></script>
-		    
+		<script type="text/javascript" src="/static/js/jquery.min.js"></script>
+        <script type="text/javascript" src="/static/js/jquery.init.js"></script>
 		    <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 		
             <!-- <script src="/static/js/jquery.min.js"></script>
