--- a/mydidata/templates/mydidata/discursive_answer_item_form.html
+++ b/mydidata/templates/mydidata/discursive_answer_item_form.html
@@ -25,7 +25,7 @@
 
 {%with answer_form_url=action_url%}
 {%if test%}	
-	{%get_test_url answer.question test as answer_form_url%}
+	{%get_test_url question test as answer_form_url%}
 {%endif%}
 
 
@@ -36,23 +36,40 @@
 <h3 class="gi-sh">Resposta Enviada</h3>
 <p>{{ answer.answer_text | safe}}</p>
 {%endif%}
+
 {% csrf_token %}
     
 {{ form.media }}
 {{ form.as_p }}
+{% if question.is_team_work%}
+<div class="form-group">
+    <a href="{% url 'mydidata:create_team' %}">Criar uma Equipe</a>
+</div>
+{% endif %}
+<label for="choice">{{ form.choice.label }}</label>
+{% for choice in form.choice.field.choices %}
+    <div class="form-group">
+        <input type="radio" name="choice" value="{{ choice.0 }}">
+        <label>{{ choice.1 | safe}}</label>
+    </div>
+
+{% endfor %}
+
 
 {% if user.is_superuser%}
-    <input type="submit" class="btn btn-primary btn-lg" id="save_next_answer" value="Salvar e Próximo Resposta" />
-    <input type="submit" class="btn btn-primary btn-lg" id="save_next_student" value="Salvar e Próximo Aluno" />
+    <input type="submit" class="btn btn-primary btn-lg" name="save_next_answer" id="save_next_answer" value="Salvar e Próximo Resposta" />
+    <input type="submit" class="btn btn-primary btn-lg" name="save_next_student" id="save_next_student" value="Salvar e Próximo Aluno" />
 {%else%}
     <input type="submit" class="btn btn-primary btn-lg" value="Salvar" />
+    {%if answer.id and answer.answer_text and answer.question.ref_keywords or answer.question.expected_output%}
+    
+        
+        <input class="btn btn-primary btn-lg" type="submit" name="save_and_feedback" value="Salvar e Obter Feedback">
+
+    
+    {%endif%}
 {% endif%}
 
-{%if answer.id and answer.answer_text and answer.question.ref_keywords or answer.question.expected_output%}
-        
-        <a class="btn btn-primary btn-lg" role="button" href="/mydidata/get_corrections/{{answer.id}}">Analisar Resposta</a>
-
-{%endif%}
 
 </form>
 {%endwith%}
@@ -64,6 +81,13 @@
 
 {% if user.is_superuser %}
 	{%get_copy_detect_url question.uuid as detect_url%}
+    {%if answer.id and answer.answer_text and answer.question.ref_keywords or answer.question.expected_output%}
+    
+        
+        <a class="btn btn-primary btn-lg" role="button" href="/mydidata/get_corrections/{{answer.id}}">Correção Automática</a>
+
+    
+    {%endif%}
 	<a href='{{ detect_url }}'>Detectar Cópias</a>
     <a href='{{ classroom.get_absolute_url }}'>Voltar para Progresso da Turma</a>
 {%endif%}
