--- a/mydidata/templates/mydidata/discursive_question_cru.html
+++ b/mydidata/templates/mydidata/discursive_question_cru.html
@@ -4,6 +4,15 @@
 {% block content %}
     <div id="content-container" class="container p-none">
         <h4 class="ad-mh">Questão {{question.index}}</h4>
-        {% include 'mydidata/question_item_form.html' %}
+        
+
+
+        <form method="post" action="" id="question-form">
+            {%csrf_token%}
+            {{ form.media }}
+            {{ form.as_p }}
+            <input type="submit" value="Salvar">
+        </form>
     </div>
 {% endblock content %}
+
