--- a/mydidata/templates/mydidata/topic_list.html
+++ b/mydidata/templates/mydidata/topic_list.html
@@ -12,10 +12,10 @@
                     {%else%}
                         Tópicos de Reforço
                     {%endif%}
-                    <!-- <span class="pull-right">
-                        <a href=""
+                    <span class="pull-right">
+                        <a href="/mydidata/topic/{{ topics.first.discipline.uuid }}"
                            class="btn btn-link p-r-none">+ Criar Tópico</a>
-                    </span> -->
+                    </span>
                 </h3>
                 {# Account Search Form #}
             </div>
