--- a/mydidata/templates/mydidata/answer_cru.html
+++ b/mydidata/templates/mydidata/answer_cru.html
@@ -25,15 +25,15 @@
 		        </div>
 		    {% endfor %}
 		{% endif %}
-		
+
 		<a href="{{question.get_update_url}}">Editar Questão</a>
 
         
 		{% with answer=form.instance%}
 		<h2 class="ad-mh">Resposta de: {{answer.student.first_name}}&nbsp;{{answer.student.last_name}}</h2>
-			{% if user.is_superuser%}
+			<!-- {% if user.is_superuser%} -->
 				<a href="{%url 'mydidata:detect_answer_text' answer.id%}">Detectar Texto</a>
-			{% endif %}
+			<!-- {% endif %} -->
 			<div id="answer_form">
 				{% include 'mydidata/discursive_answer_item_form.html' %}
 			</div>
