--- a/mydidata/templates/mydidata/base.html
+++ b/mydidata/templates/mydidata/base.html
@@ -61,7 +61,7 @@
                             <a class="nav-link" href="/mydidata">Bem vindo {{user.first_name}}!</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="{% url 'mydidata:disciplines' %}"
+                            <a class="nav-link" href="{% url 'mydidata:disciplines' %}?restrict=true"
                                             >Meus Cursos</a>
                         </li>
 
