--- a/mydidata/templates/mydidata/class_list.html
+++ b/mydidata/templates/mydidata/class_list.html
@@ -1,12 +1,12 @@
 {% extends 'mydidata/base.html' %}
-{% block title %}Tópicos{% endblock title %}
+{% block title %}Turmas{% endblock title %}
 
 
 {% block content %}
     <div id="content-container" class="container p-none">
         <div id="al-container" class="side-p">
             <div id="al-control">
-                <h3 class="ad-mh">Turmas
+                <h3 class="ad-mh">Gerência de Turmas
                     <span class="pull-right">
                         <a href=""
                            class="btn btn-link p-r-none">+ Criar Turma</a>
@@ -15,19 +15,21 @@
                 {# Account Search Form #}
             </div>
             {# List of Accounts #}
-            <div class="list-group" style="margin-bottom: 1rem;">
-                {% for classroom in class_list %}
+            {% for classroom in class_list %}
+            <div class="mt-3 py-3 px-3 bg-white shadow border border-gray-100">
+    
+                <a href="{{ classroom.get_absolute_url }}" >{{ classroom.name }}</a>
+                <div class="mt-2">
                     
-                        <div class="list-group-item list-group-item-action">
-                            <a href="{{ classroom.get_absolute_url }}" >{{ classroom.name }}</a>
-                            &nbsp
-                            |
-                            &nbsp
-                            <a style="color: #3371b7;" href="{{ classroom.get_percentage_progress_url }}">Ver progresso(%)</a>
-                            | <a href="{{ classroom.get_grades_url }}">Notas para Tópicos Fechados</a>
-                        </div>
-                {% endfor %}
+                    <a type="button" class="btn btn-primary" href="{{ classroom.get_grades_url }}">Nota para Tópicos Fechados</a>
+                    
+                    <a type="button" href="{{ classroom.get_percentage_progress_url }}" class="btn btn-primary" href="">Progresso</a>
+
+                    <a type="button" class="btn btn-primary" href="{% url 'mydidata:tests' classroom.id %}">Avaliações</a>
+                </div>
             </div>
+            {%endfor%}
+
             {# Pagination Section #}
         </div>
     </div>
