--- a/mydidata/templates/mydidata/class_list.html
+++ b/mydidata/templates/mydidata/class_list.html
@@ -19,11 +19,12 @@
             <div class="mt-3 py-3 px-3 bg-white shadow border border-gray-100">
     
                 <a href="{{ classroom.get_absolute_url }}" >{{ classroom.name }}</a>
+                
                 <div class="mt-2">
                     
-                    <a type="button" class="btn btn-primary" href="{{ classroom.get_grades_url }}">Nota para Tópicos Fechados</a>
+                    <a type="button" class="btn btn-primary" href="{{ classroom.get_grades_url }}">Notas para Tópicos Fechados</a>
                     
-                    <a type="button" href="{{ classroom.get_percentage_progress_url }}" class="btn btn-primary" href="">Progresso</a>
+                    <a type="button" href="{{ classroom.get_progress_url }}" class="btn btn-primary" href="">Progresso</a>
 
                     <a type="button" class="btn btn-primary" href="{% url 'mydidata:tests' classroom.id %}">Avaliações</a>
                 </div>
