removendo copiar e colar

--- a/mydidata/templates/mydidata/answer_cru.html
+++ b/mydidata/templates/mydidata/answer_cru.html
@@ -80,12 +80,12 @@
 			}
 
 		});
-		CKEDITOR.on("instanceReady", function(event){
-			CKEDITOR.instances.id_answer_text.on('paste', function(evt) {
-			    evt.cancel();
-				alert("Não copie e cole conteúdos!");
-			});
-		});
+		// CKEDITOR.on("instanceReady", function(event){
+			// CKEDITOR.instances.id_answer_text.on('paste', function(evt) {
+			    // evt.cancel();
+				// alert("Não copie e cole conteúdos!");
+			// });
+		// });
 	</script>
 
 {% endblock footer_javascript_page %}
